[package]
name = "secops"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
hickory-client = "0.24"
hickory-resolver = { version = "0.24", features = ["dnssec-ring"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
